# OpenglPlayground

./: .gitignore  CMakeLists.txt  Main.cpp  README.md
helpers/: HelperFile.hpp  HelperInput.hpp  HelperMiscellaneous.hpp  PerlinNoise.hpp  YOLO.cpp  YOLO.hpp  stb_image.hpp
shaders/: 41.texture.fs.shader  41.texture.vs.shader  camera_f.shader  camera_v.shader
src/: Object.cpp  Object.hpp  OpenGLWindow.cpp  OpenGLWindow.hpp  PerlinMap.cpp  PerlinMap.hpp  SceneTree.cpp  SceneTree.hpp  Textures.cpp  Textures.hpp
src/objs/: Chunk.cpp  Chunk.hpp  Renderable.cpp  Renderable.hpp
test/: Shapes.cpp  Shapes.hpp
